# multi-asset-quant-lab

./: .gitignore  AGENTS.md  DATASETS.md  LICENSE  PLANS.md  README.md  SOURCES.md  STATUS.md  VALIDATION.md  futures_workflow.py  pyproject.toml
config/: sources.yaml
examples/: research_helpers.py
notebooks/: 01_duckdb_dataset_browser.ipynb  02_factor_backtest_template.ipynb
src/: __init__.py
src/futures_workflow/: __init__.py  agent_platform.py  calendar.py  cli.py  config.py  constants.py  crypto_observation.py  delivery_results.py  environment_health.py  exceptions.py  exercise_results.py  gui.py  logging_utils.py  master_data.py  models.py  platform.py  platform_metadata.py  pregrab.py  pregrab_state.py  public_assets.py  public_bonds.py  public_references.py  registry.py  regression_state.py  research_platform.py  selection.py  source_catalog.py  storage.py  trading_calendar.py  utils.py  window_state.py  workflow.py
tests/: test_agent_platform.py  test_browser_bootstrap.py  test_cli.py  test_crypto_observation.py  test_czce_source.py  test_dce_source.py  test_delivery_results.py  test_gfex_source.py  test_gui.py  test_master_data.py  test_option_http_behavior.py  test_option_parsers.py  test_option_sources.py  test_parsers.py  test_platform_metadata.py  test_pregrab.py  test_pregrab_state.py  test_public_assets.py  test_public_bonds.py  test_public_references.py  test_registry.py  test_regression_state.py  test_research_platform.py  test_result_collectors.py  test_selection.py  test_source_base.py  test_source_catalog.py  test_storage.py  test_workflow.py
(+33 files in other folders)
