[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futures-workflow"
version = "0.1.0"
description = "China futures daily historical data workflow with official-first adapters."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "lxml>=5.0.0",
  "tenacity>=8.2.0",
  "playwright>=1.40.0",
  "akshare>=1.16.0",
  "duckdb>=1.4.1",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
]

[project.scripts]
futures-workflow = "futures_workflow.cli:main"
futures-workflow-gui = "futures_workflow.gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
